--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,14 +3,34 @@ name = "xplit"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 base64 = "0.22.1"
-clap = { version = "4.5.53", features = ["derive"] }
 crc32fast = "1.5.0"
 hex = "0.4.3"
-rand = { version = "0.9.2", features = ["std", "std_rng"] }
-rand_core = { version = "0.9.3", features = ["os_rng", "std"] }
+rand = { version = "0.8", features = ["std", "std_rng"] }
 thiserror = "2.0.17"
+
+# CLI dependencies (optional for WASM builds)
+clap = { version = "4.5.53", features = ["derive"], optional = true }
+
+# WASM dependencies
+wasm-bindgen = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.6"
+serde_json = "1.0"
+
+# WASM-specific dependencies (only for wasm32 target)
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1"
+wee_alloc = "0.4"
+getrandom = { version = "0.2", features = ["js"] }
 
 [dev-dependencies]
 quickcheck = "1.0.3"
+
+[features]
+default = ["cli"]
+cli = ["dep:clap"]
