--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  # Note: The GitHub Pages deployment workflow depends on this workflow
+  # Pages will only deploy if this CI workflow completes successfully
 
 env:
   CARGO_TERM_COLOR: always
@@ -19,6 +21,7 @@ jobs:
       uses: dtolnay/rust-toolchain@stable
       with:
         components: rustfmt, clippy
+        targets: wasm32-unknown-unknown
 
     - name: Cache cargo registry
       uses: actions/cache@v4
@@ -46,3 +49,6 @@ jobs:
 
     - name: Run tests
       run: cargo test --all-features
+
+    - name: Check WASM build
+      run: cargo check --lib --target wasm32-unknown-unknown --no-default-features
